newtab - prevent supporting card from overflowing onto other elements

--- a/src/style/NewTab.less
+++ b/src/style/NewTab.less
@@ -298,6 +298,7 @@
     left: 0;
     top: 1em;
     z-index: 999;
+    max-width: 25%;
 }
 
 .together-we-ve-rasied {
